feat: implemented the caching feature for monthly summary and loan schedule fetching